deployment/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: airsel-micro-my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "airsel-micro-my-prod"
spec:
  tls:
  - hosts:
    - airsel-micro.pipe.my
    - airsel-micro-api.pipe.my

    secretName: airsel-micro-my-prod

  rules:
  - host: airsel-micro-api.pipe.my
    http:
      paths:
      - backend:
          serviceName: airsel-micro-api
          servicePort: 5000    
  - host: airsel-micro.pipe.my
    http:
      paths:
      - backend:
          serviceName: airsel-micro-webapp
          servicePort: 80
